fix: telemetry text changes, keypad disable condition fixes, voipaccount select visibility condition fix.

--- a/src/components/telemetry/telemetry.scss
+++ b/src/components/telemetry/telemetry.scss
@@ -23,4 +23,8 @@
         padding-bottom: $spacer * 3;
         text-align: center;
     }
+
+    .buttons {
+        margin-bottom: $spacer * 3;
+    }
 }
